# ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.hpp  HitRecord.hpp  Hittable.hpp  HittableList.hpp  Ray.hpp  Sphere.hpp  Utils.hpp  Vec3.hpp  vec3.hpp
include/materials/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
notes/: operator-overloads.md
scripts/: build  init  run  test
src/: CMakeLists.txt  Camera.cpp  HitRecord.cpp  HittableList.cpp  Main.cpp  Ray.cpp  Sphere.cpp  Vec3.cpp  main.cpp
tests/: CMakeLists.txt  RayTest.cpp  Vec3Test.cpp
